ch08/http-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-dep
spec:
  selector:
    matchLabels:
      app: http-server
  # high availability
  replicas: 3
  template:
    metadata:
      labels:
        app: http-server
    spec:
      # graceful stop
      terminationGracePeriodSeconds: 20
      containers:
        - name: http-server
          image: fingerf/httpserver
          ports:
            - containerPort: 8080
          # graceful start
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          # probe liveness
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          # resource required and QoS
          resources:
            limits:
              cpu: 200m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  ports:
    - port: 18080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: http-server
