ch08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: cncamp.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service: 
            name: http-server-service
            port:
              number: 8080
